--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -23,16 +23,63 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 80
-          envFrom:
-          - configMapRef:
-              name: conjur-connect
+          env:
+            # from your existing conjur-connect (already present for the sidecar)
+            - name: CONJUR_API_BASE
+              valueFrom:
+                configMapKeyRef:
+                  name: conjur-connect
+                  key: CONJUR_APPLIANCE_URL     # e.g. https://<tenant>.secretsmgr.cyberark.cloud/api
+            - name: CONJUR_ACCOUNT
+              valueFrom:
+                configMapKeyRef:
+                  name: conjur-connect
+                  key: CONJUR_ACCOUNT           # e.g. conjur
+            # from the small app config
+            - name: CONJUR_TOKEN_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: starai-web-config
+                  key: CONJUR_TOKEN_PATH
+            - name: DB_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: starai-web-config
+                  key: DB_NAME
           volumeMounts:
-          - mountPath: /run/conjur
-            name: conjur-access-token
-            readOnly: true
-        - image: cyberark/conjur-authn-k8s-client
+            - name: conjur-access-token
+              mountPath: /run/conjur
+              readOnly: true
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 80
+            initialDelaySeconds: 3
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 6
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 80
+            initialDelaySeconds: 10
+            periodSeconds: 20
+            timeoutSeconds: 2
+            failureThreshold: 3
+          resources:
+            requests:
+              cpu: "50m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+
+        - name: authenticator
+          image: cyberark/conjur-authn-k8s-client
           imagePullPolicy: Always
-          name: authenticator
           env:
             - name: JWT_TOKEN_PATH
               value: /var/run/secrets/tokens/jwt
@@ -40,12 +87,13 @@ spec:
               value: debug
           envFrom:
             - configMapRef:
-                name: conjur-connect
+                name: conjur-connect            # <-- unchanged, as you wanted
           volumeMounts:
-            - mountPath: /run/conjur
-              name: conjur-access-token
-            - mountPath: /var/run/secrets/tokens
-              name: jwt-token
+            - name: conjur-access-token
+              mountPath: /run/conjur
+            - name: jwt-token
+              mountPath: /var/run/secrets/tokens
+
       volumes:
         - name: conjur-access-token
           emptyDir:
