--- a/manifests/Service.yaml
+++ b/manifests/Service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: starai-web-service
+  name: starai-web
   namespace: starai-demo
 spec:
+  type: ClusterIP
   selector:
     app: starai-web
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+  - port: 80
+    targetPort: 80
