--- a/manifests/Service.yaml
+++ b/manifests/Service.yaml
@@ -8,5 +8,6 @@ spec:
   selector:
     app: starai-web
   ports:
-  - port: 80
-    targetPort: 80
+  - name: https
+    port: 443
+    targetPort: 8443
