--- a/manifests/Ingress.yaml
+++ b/manifests/Ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/security-groups: sg-0635c868239672b88
     # Listeners: 80 + 443 on the ALB
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
     # ACM cert on the ALB (Venafi-issued)
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:409556437035:certificate/7be5c154-635e-4533-9b6c-85fd8f7ab03c
     # Redirect HTTP -> HTTPS on ALB
